src/auryn/snapshots/auryn__auryn__codegen_java__tests__assignment-2.snap
---
source: src/auryn/codegen_java.rs
expression: "generate_class(\"let a = 1\\nprint(a)\")"
---
ClassData {
    constant_pool: [
        Utf8(
            "[Ljava/lang/String;",
        ),
        Class {
            name_index: ConstantPoolIndex(
                1,
            ),
        },
        Utf8(
            "java/io/PrintStream",
        ),
        Class {
            name_index: ConstantPoolIndex(
                3,
            ),
        },
        Integer {
            integer: 1,
        },
        Utf8(
            "java/lang/System",
        ),
        Class {
            name_index: ConstantPoolIndex(
                6,
            ),
        },
        Utf8(
            "out",
        ),
        Utf8(
            "Ljava/io/PrintStream;",
        ),
        NameAndType {
            name_index: ConstantPoolIndex(
                8,
            ),
            type_index: ConstantPoolIndex(
                9,
            ),
        },
        FieldRef {
            class_index: ConstantPoolIndex(
                7,
            ),
            name_and_type_index: ConstantPoolIndex(
                10,
            ),
        },
        Utf8(
            "println",
        ),
        Utf8(
            "(I)V",
        ),
        NameAndType {
            name_index: ConstantPoolIndex(
                12,
            ),
            type_index: ConstantPoolIndex(
                13,
            ),
        },
        MethodRef {
            class_index: ConstantPoolIndex(
                4,
            ),
            name_and_type_index: ConstantPoolIndex(
                14,
            ),
        },
        Utf8(
            "main",
        ),
        Utf8(
            "([Ljava/lang/String;)V",
        ),
        Utf8(
            "Code",
        ),
        Utf8(
            "StackMapTable",
        ),
        Utf8(
            "Helloworld",
        ),
        Class {
            name_index: ConstantPoolIndex(
                20,
            ),
        },
        Utf8(
            "java/lang/Object",
        ),
        Class {
            name_index: ConstantPoolIndex(
                22,
            ),
        },
    ],
    this_class: ConstantPoolIndex(
        21,
    ),
    super_class: ConstantPoolIndex(
        23,
    ),
    methods: [
        Method {
            flags: 9,
            name_index: ConstantPoolIndex(
                16,
            ),
            descriptor_index: ConstantPoolIndex(
                17,
            ),
            attributes: [
                AttributeInfo {
                    name_index: ConstantPoolIndex(
                        18,
                    ),
                    attribute: Code(
                        CodeAttribute {
                            max_locals: 4,
                            code: [
                                Ldc(
                                    5,
                                ),
                                IStore(
                                    1,
                                ),
                                ILoad(
                                    1,
                                ),
                                IStore(
                                    2,
                                ),
                                GetStatic(
                                    ConstantPoolIndex(
                                        11,
                                    ),
                                ),
                                ILoad(
                                    2,
                                ),
                                InvokeVirtual(
                                    ConstantPoolIndex(
                                        15,
                                    ),
                                ),
                                Return,
                            ],
                            attributes: [
                                AttributeInfo {
                                    name_index: ConstantPoolIndex(
                                        19,
                                    ),
                                    attribute: StackMapTable(
                                        StackMapTableAttribute {
                                            entries: [
                                                Full {
                                                    offset_delta: 0,
                                                    locals: [
                                                        Object {
                                                            constant_pool_index: ConstantPoolIndex(
                                                                2,
                                                            ),
                                                        },
                                                    ],
                                                    stack: [],
                                                },
                                            ],
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ],
        },
    ],
}
