src/auryn/snapshots/auryn__auryn__codegen_java__tests__assignment.snap
---
source: src/auryn/codegen_java.rs
expression: "generate_class(\"let a = 1\")"
---
ClassData {
    constant_pool: [
        Utf8(
            "[Ljava/lang/String;",
        ),
        Class {
            name_index: ConstantPoolIndex(
                1,
            ),
        },
        Integer {
            integer: 1,
        },
        Utf8(
            "main",
        ),
        Utf8(
            "([Ljava/lang/String;)V",
        ),
        Utf8(
            "Code",
        ),
        Utf8(
            "StackMapTable",
        ),
        Utf8(
            "Helloworld",
        ),
        Class {
            name_index: ConstantPoolIndex(
                8,
            ),
        },
        Utf8(
            "java/lang/Object",
        ),
        Class {
            name_index: ConstantPoolIndex(
                10,
            ),
        },
    ],
    this_class: ConstantPoolIndex(
        9,
    ),
    super_class: ConstantPoolIndex(
        11,
    ),
    methods: [
        Method {
            flags: 9,
            name_index: ConstantPoolIndex(
                4,
            ),
            descriptor_index: ConstantPoolIndex(
                5,
            ),
            attributes: [
                AttributeInfo {
                    name_index: ConstantPoolIndex(
                        6,
                    ),
                    attribute: Code(
                        CodeAttribute {
                            max_locals: 3,
                            code: [
                                Ldc(
                                    3,
                                ),
                                IStore(
                                    1,
                                ),
                                Goto(
                                    JumpPoint(
                                        0,
                                    ),
                                ),
                            ],
                            attributes: [
                                AttributeInfo {
                                    name_index: ConstantPoolIndex(
                                        7,
                                    ),
                                    attribute: StackMapTable(
                                        StackMapTableAttribute {
                                            entries: [
                                                Full {
                                                    offset_delta: 0,
                                                    locals: [
                                                        Object {
                                                            constant_pool_index: ConstantPoolIndex(
                                                                2,
                                                            ),
                                                        },
                                                    ],
                                                    stack: [],
                                                },
                                            ],
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ],
        },
    ],
}
