src/auryn/snapshots/auryn__auryn__codegen_java__tests__print.snap
---
source: src/auryn/codegen_java.rs
expression: "generate_class(\"print(2 * 3)\")"
---
ClassData {
    constant_pool: [
        Utf8(
            "[Ljava/lang/String;",
        ),
        Class {
            name_index: ConstantPoolIndex(
                1,
            ),
        },
        Integer {
            integer: 2,
        },
        Integer {
            integer: 3,
        },
        Utf8(
            "java/io/PrintStream",
        ),
        Class {
            name_index: ConstantPoolIndex(
                5,
            ),
        },
        Utf8(
            "java/lang/System",
        ),
        Class {
            name_index: ConstantPoolIndex(
                7,
            ),
        },
        Utf8(
            "out",
        ),
        Utf8(
            "Ljava/io/PrintStream;",
        ),
        NameAndType {
            name_index: ConstantPoolIndex(
                9,
            ),
            type_index: ConstantPoolIndex(
                10,
            ),
        },
        FieldRef {
            class_index: ConstantPoolIndex(
                8,
            ),
            name_and_type_index: ConstantPoolIndex(
                11,
            ),
        },
        Utf8(
            "println",
        ),
        Utf8(
            "(I)V",
        ),
        NameAndType {
            name_index: ConstantPoolIndex(
                13,
            ),
            type_index: ConstantPoolIndex(
                14,
            ),
        },
        MethodRef {
            class_index: ConstantPoolIndex(
                6,
            ),
            name_and_type_index: ConstantPoolIndex(
                15,
            ),
        },
        Utf8(
            "main",
        ),
        Utf8(
            "([Ljava/lang/String;)V",
        ),
        Utf8(
            "Code",
        ),
        Utf8(
            "StackMapTable",
        ),
        Utf8(
            "Helloworld",
        ),
        Class {
            name_index: ConstantPoolIndex(
                21,
            ),
        },
        Utf8(
            "java/lang/Object",
        ),
        Class {
            name_index: ConstantPoolIndex(
                23,
            ),
        },
    ],
    this_class: ConstantPoolIndex(
        22,
    ),
    super_class: ConstantPoolIndex(
        24,
    ),
    methods: [
        Method {
            flags: 9,
            name_index: ConstantPoolIndex(
                17,
            ),
            descriptor_index: ConstantPoolIndex(
                18,
            ),
            attributes: [
                AttributeInfo {
                    name_index: ConstantPoolIndex(
                        19,
                    ),
                    attribute: Code(
                        CodeAttribute {
                            max_locals: 3,
                            code: [
                                Ldc(
                                    3,
                                ),
                                Ldc(
                                    4,
                                ),
                                IMul,
                                IStore(
                                    1,
                                ),
                                GetStatic(
                                    ConstantPoolIndex(
                                        12,
                                    ),
                                ),
                                ILoad(
                                    1,
                                ),
                                InvokeVirtual(
                                    ConstantPoolIndex(
                                        16,
                                    ),
                                ),
                                Goto(
                                    JumpPoint(
                                        0,
                                    ),
                                ),
                            ],
                            attributes: [
                                AttributeInfo {
                                    name_index: ConstantPoolIndex(
                                        20,
                                    ),
                                    attribute: StackMapTable(
                                        StackMapTableAttribute {
                                            entries: [
                                                Full {
                                                    offset_delta: 0,
                                                    locals: [
                                                        Object {
                                                            constant_pool_index: ConstantPoolIndex(
                                                                2,
                                                            ),
                                                        },
                                                    ],
                                                    stack: [],
                                                },
                                            ],
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ],
        },
    ],
}
