src/auryn/snapshots/auryn__auryn__codegen_java__tests__stack_map_table_generation.snap
---
source: src/auryn/codegen_java.rs
expression: "generate_class(\"loop {\\nif 1 {\\nprint(42)\\n}\\nprint(100)\\n}\")"
---
ClassData {
    constant_pool: [
        Utf8(
            "[Ljava/lang/String;",
        ),
        Class {
            name_index: ConstantPoolIndex(
                1,
            ),
        },
        Utf8(
            "java/io/PrintStream",
        ),
        Class {
            name_index: ConstantPoolIndex(
                3,
            ),
        },
        Integer {
            integer: 1,
        },
        Integer {
            integer: 42,
        },
        Utf8(
            "java/lang/System",
        ),
        Class {
            name_index: ConstantPoolIndex(
                7,
            ),
        },
        Utf8(
            "out",
        ),
        Utf8(
            "Ljava/io/PrintStream;",
        ),
        NameAndType {
            name_index: ConstantPoolIndex(
                9,
            ),
            type_index: ConstantPoolIndex(
                10,
            ),
        },
        FieldRef {
            class_index: ConstantPoolIndex(
                8,
            ),
            name_and_type_index: ConstantPoolIndex(
                11,
            ),
        },
        Utf8(
            "println",
        ),
        Utf8(
            "(I)V",
        ),
        NameAndType {
            name_index: ConstantPoolIndex(
                13,
            ),
            type_index: ConstantPoolIndex(
                14,
            ),
        },
        MethodRef {
            class_index: ConstantPoolIndex(
                4,
            ),
            name_and_type_index: ConstantPoolIndex(
                15,
            ),
        },
        Integer {
            integer: 100,
        },
        Utf8(
            "main",
        ),
        Utf8(
            "([Ljava/lang/String;)V",
        ),
        Utf8(
            "Code",
        ),
        Utf8(
            "StackMapTable",
        ),
        Utf8(
            "Helloworld",
        ),
        Class {
            name_index: ConstantPoolIndex(
                22,
            ),
        },
        Utf8(
            "java/lang/Object",
        ),
        Class {
            name_index: ConstantPoolIndex(
                24,
            ),
        },
    ],
    this_class: ConstantPoolIndex(
        23,
    ),
    super_class: ConstantPoolIndex(
        25,
    ),
    methods: [
        Method {
            flags: 9,
            name_index: ConstantPoolIndex(
                18,
            ),
            descriptor_index: ConstantPoolIndex(
                19,
            ),
            attributes: [
                AttributeInfo {
                    name_index: ConstantPoolIndex(
                        20,
                    ),
                    attribute: Code(
                        CodeAttribute {
                            max_locals: 4,
                            code: [
                                Ldc(
                                    5,
                                ),
                                IfI {
                                    comparison: Equal,
                                    jump_point: JumpPoint(
                                        17,
                                    ),
                                },
                                Ldc(
                                    6,
                                ),
                                IStore(
                                    1,
                                ),
                                GetStatic(
                                    ConstantPoolIndex(
                                        12,
                                    ),
                                ),
                                ILoad(
                                    1,
                                ),
                                InvokeVirtual(
                                    ConstantPoolIndex(
                                        16,
                                    ),
                                ),
                                Ldc(
                                    17,
                                ),
                                IStore(
                                    2,
                                ),
                                GetStatic(
                                    ConstantPoolIndex(
                                        12,
                                    ),
                                ),
                                ILoad(
                                    2,
                                ),
                                InvokeVirtual(
                                    ConstantPoolIndex(
                                        16,
                                    ),
                                ),
                                Goto(
                                    JumpPoint(
                                        0,
                                    ),
                                ),
                            ],
                            attributes: [
                                AttributeInfo {
                                    name_index: ConstantPoolIndex(
                                        21,
                                    ),
                                    attribute: StackMapTable(
                                        StackMapTableAttribute {
                                            entries: [
                                                Full {
                                                    offset_delta: 0,
                                                    locals: [
                                                        Object {
                                                            constant_pool_index: ConstantPoolIndex(
                                                                2,
                                                            ),
                                                        },
                                                    ],
                                                    stack: [],
                                                },
                                                Full {
                                                    offset_delta: 4,
                                                    locals: [
                                                        Object {
                                                            constant_pool_index: ConstantPoolIndex(
                                                                2,
                                                            ),
                                                        },
                                                    ],
                                                    stack: [],
                                                },
                                                Full {
                                                    offset_delta: 11,
                                                    locals: [
                                                        Object {
                                                            constant_pool_index: ConstantPoolIndex(
                                                                2,
                                                            ),
                                                        },
                                                    ],
                                                    stack: [],
                                                },
                                            ],
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ],
        },
    ],
}
